@@ -1,0 +1,3 @@
+{
+	print split(strftime($1), f)
+}
