@@ -1,3 +1,8 @@
+2017-01-26         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* Makefile.am (strftfld): New test.
+	* strftfld.awk, strftfld.in, strftfld.ok: New files.
+
 2017-01-15         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	* Makefile.am (concat5): New test.
